// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate-component-tree invoked machines using .load should pass child machine context & events to load fns 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
      },
    ],
    "id": "(machine)",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": Object {
          "ctx": "child context",
          "event": Object {
            "type": "xstate.init",
          },
        },
      },
    ],
    "id": "child",
  },
]
`;

exports[`xstate-component-tree invoked machines using .load should support async .load 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
      },
    ],
    "id": "(machine)",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
      },
    ],
    "id": "child",
  },
]
`;

exports[`xstate-component-tree invoked machines using .load should support sync .load 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "one",
      },
    ],
    "id": "(machine)",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
      },
    ],
    "id": "child",
  },
]
`;
